--- a/style.css
+++ b/style.css
@@ -3,23 +3,23 @@
 body{
     background-color: hsl(30, 54%, 90%);
     display: flex;
+    justify-content: center;
     align-items: center;
+    margin: 0;
     width: 100%;
-    height: 100%;
-    font-family: "Young Serif", serif;
-    
+    height: 200vh;
+    font-family: "Young Serif", serif;  
 }
 
 main{
     background-color: white;
     border-radius: 15px;
-    margin: 0 auto;
-    width: 40%;
-
+    width: 50%;
 }
 
 .contain{
     width: 90%;
+    height: 100%;
     margin: 2em auto;
 }
 
