--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     align-items: center;
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: 300vh;
     font-family: "Young Serif", serif;  
 }
 
